tests/requests/invalid/001.py
from gunicorn.ghttp.errors import NoMoreData
request = NoMoreData